[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/Spawner.gd" type="Script" id=1]
[ext_resource path="res://sounds/Movement Proposition.mp3" type="AudioStream" id=2]
[ext_resource path="res://sprites/bgcool.jpg" type="Texture" id=3]
[ext_resource path="res://sprites/Grass.png" type="Texture" id=4]
[ext_resource path="res://scenes/Fly.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/Arena2P.gd" type="Script" id=6]
[ext_resource path="res://sprites/cloud.png" type="Texture" id=7]

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 0.443137, 0.541176, 1, 1, 0, 0.00784314, 0.333333, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 8 )

[sub_resource type="Animation" id=13]
resource_name = "Blowin"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Grass:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.880001 ), Vector2( 1, 0.95 ), Vector2( 1, 0.880001 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("Grass:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0.880001 ) ]
}

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 427, 30.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 35.5, 40 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10.5, 283.5 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 308.5, 10 )

[sub_resource type="Animation" id=16]
resource_name = "Blowin"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Grass:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.880001 ), Vector2( 1, 0.95 ), Vector2( 1, 0.880001 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("Grass:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0.880001 ) ]
}

[node name="Arena2P" type="Node2D"]
script = ExtResource( 6 )
wacky_mode = false
daily_mode = true

[node name="BG" type="Node2D" parent="."]
z_index = -100

[node name="TextureRect" type="TextureRect" parent="BG"]
margin_left = 626.0
margin_top = -2.0
margin_right = 1203.0
margin_bottom = 637.0
rect_rotation = 90.0
texture = SubResource( 12 )
expand = true
flip_h = true

[node name="Grass" type="Node2D" parent="BG"]
modulate = Color( 0.639216, 0.639216, 0.639216, 1 )
position = Vector2( 233, 518 )
scale = Vector2( 1, 0.880001 )

[node name="Sprite6" type="Sprite" parent="BG/Grass"]
position = Vector2( 340, -74.9999 )
scale = Vector2( 3.22, 4.83846 )
texture = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="BG/Grass"]
position = Vector2( 196, -99.9999 )
scale = Vector2( 3.22, 4.83846 )
texture = ExtResource( 4 )

[node name="Sprite4" type="Sprite" parent="BG/Grass"]
position = Vector2( 54, -105.682 )
scale = Vector2( 3.22, 4.83846 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="BG/Grass"]
position = Vector2( -74, -73.8635 )
scale = Vector2( 3.22, 4.83846 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="BG/Grass"]
position = Vector2( -217, -37.4999 )
scale = Vector2( 3.22, 4.83846 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="BG"]
modulate = Color( 1, 0.917647, 0.419608, 1 )
position = Vector2( 297, 690 )
scale = Vector2( 1.07642, 0.789588 )
texture = ExtResource( 3 )

[node name="Grassmations" type="AnimationPlayer" parent="BG"]
autoplay = "Blowin"
anims/Blowin = SubResource( 13 )
anims/RESET = SubResource( 14 )

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 27, 576 )

[node name="Sprite" type="Sprite" parent="Floor"]
modulate = Color( 0.709804, 0.545098, 0.223529, 1 )
position = Vector2( 270, 171 )
scale = Vector2( 1.07642, 0.789588 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 274, 0.5 )
shape = SubResource( 15 )

[node name="Fly1" parent="." instance=ExtResource( 5 )]
position = Vector2( 102, 399 )
z_index = 1000
collision_mask = 3

[node name="Fly2" parent="." instance=ExtResource( 5 )]
position = Vector2( 227, 404 )
z_index = 1000
collision_mask = 3

[node name="Fly3" parent="." instance=ExtResource( 5 )]
position = Vector2( 330, 406 )
z_index = 1000
collision_mask = 3

[node name="Fly4" parent="." instance=ExtResource( 5 )]
position = Vector2( 449, 409 )
z_index = 1000
collision_mask = 3

[node name="Spawner" type="Node2D" parent="."]
position = Vector2( 0, -3 )
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="Spawner"]
wait_time = 2.0
autostart = true

[node name="CheaterSquares" type="Area2D" parent="Spawner"]
scale = Vector2( 1, 4.24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawner/CheaterSquares"]
position = Vector2( 569.5, 42 )
scale = Vector2( 0.5, 1 )
shape = SubResource( 11 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Spawner/CheaterSquares"]
position = Vector2( 32, 42 )
scale = Vector2( 0.5, 1 )
shape = SubResource( 11 )

[node name="Walls" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2( 0.5, 273.5 )
shape = SubResource( 9 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2( 600.5, 273.5 )
shape = SubResource( 9 )

[node name="Ceiling" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Ceiling"]
position = Vector2( 298.5, 0 )
shape = SubResource( 18 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 5.0
autoplay = true

[node name="FG" type="Node2D" parent="."]
modulate = Color( 0.694118, 0.694118, 0.694118, 1 )
position = Vector2( 6, 52 )
z_index = 1001

[node name="Grass" type="Node2D" parent="FG"]
modulate = Color( 0.639216, 0.639216, 0.639216, 1 )
position = Vector2( 226, 688 )
scale = Vector2( 1, 0.880001 )

[node name="Sprite6" type="Sprite" parent="FG/Grass"]
position = Vector2( 335, -97.7271 )
scale = Vector2( 3.22, 4.83846 )
texture = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="FG/Grass"]
position = Vector2( 196, -99.9999 )
scale = Vector2( 3.22, 4.83846 )
texture = ExtResource( 4 )

[node name="Sprite4" type="Sprite" parent="FG/Grass"]
position = Vector2( 54, -105.682 )
scale = Vector2( 3.22, 4.83846 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="FG/Grass"]
position = Vector2( -74, -87.4999 )
scale = Vector2( 3.22, 4.83846 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="FG/Grass"]
position = Vector2( -213, -88.6363 )
scale = Vector2( 3.22, 4.83846 )
texture = ExtResource( 4 )

[node name="Grassmations" type="AnimationPlayer" parent="FG"]
autoplay = "Blowin"
anims/Blowin = SubResource( 16 )
anims/RESET = SubResource( 17 )

[node name="Slimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Clouds" type="CPUParticles2D" parent="."]
modulate = Color( 0.901961, 0.901961, 0.901961, 1 )
position = Vector2( 831, 105 )
z_index = -1
amount = 3
lifetime = 10.0
preprocess = 7.0
texture = ExtResource( 7 )
emission_shape = 1
emission_sphere_radius = 60.57
direction = Vector2( -1, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
scale_amount = 3.5
scale_amount_random = 0.5

[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Spawner/CheaterSquares" to="Spawner" method="_on_CheaterSquares_body_entered"]
[connection signal="body_exited" from="Spawner/CheaterSquares" to="Spawner" method="_on_CheaterSquares_body_exited"]
[connection signal="timeout" from="Slimer" to="." method="_on_Slimer_timeout"]
